DSC-2 Добавил удаление. Чуть поменял схему базы
